001-http-example-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-openshift-gitops-001
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
