004-httpd-ex-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd-ex
  name: httpd-ex
  namespace: demo-openshift-gitops-001
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: httpd-ex
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        deployment: httpd-ex
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/demo-openshift-gitops-001/httpd-ex
        imagePullPolicy: IfNotPresent
        name: httpd-ex
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
