003-httpd-ex-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-ex
  name: httpd-ex
  namespace: demo-openshift-gitops-001
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: httpd-ex
  sessionAffinity: None
  type: ClusterIP
